Output/CGrammar/C_GrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/miskr/TKiK/TKiK_repozytorium/Grammars/C_Grammar.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace CGrammar {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class C_GrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		Hash_Include=1, Hash_Define=2, Hash_ifndef=3, Hash_endif=4, Hash_undef=5, 
		Hash_ifdef=6, Hash_if=7, Hash_elif=8, Hash_else=9, Const=10, Struct=11, 
		Typedef=12, Auto=13, Extern=14, Static=15, Register=16, Sizeof=17, Void=18, 
		Char=19, Short=20, Int=21, Long=22, Float=23, Double=24, Signed=25, Unsigned=26, 
		Bool=27, Return=28, If=29, Else=30, Switch=31, For=32, While=33, Case=34, 
		Default=35, Continue=36, Break=37, Do=38, Less=39, Greater=40, Semicolon=41, 
		Comma=42, Assign=43, QuestionMark=44, Colon=45, Multiply=46, Divide=47, 
		Plus=48, Minus=49, LeftParen=50, RightParen=51, LeftBrace=52, RightBrace=53, 
		LeftBracket=54, RightBracket=55, Ampersand=56, Mod=57, Arrow=58, Dot=59, 
		Exclamation=60, DecOp=61, IncOp=62, OrOp=63, AndOp=64, NeOp=65, EqOp=66, 
		GeOp=67, LeOp=68, AddAssign=69, SubAssign=70, MulAssign=71, DivAssign=72, 
		ModAssign=73, Identifier=74, Constant=75, DigitSequence=76, StringLiteral=77, 
		LibraryName=78, Whitespace=79, Newline=80, BlockComment=81, LineComment=82;
	public const int
		RULE_start = 0, RULE_translationUnit = 1, RULE_hashStatement = 2, RULE_undefStatement = 3, 
		RULE_ifdefStatement = 4, RULE_ifStatement = 5, RULE_elifStatement = 6, 
		RULE_elseStatement = 7, RULE_ifndefStatement = 8, RULE_endIfStatement = 9, 
		RULE_defineStatement = 10, RULE_includeStatement = 11, RULE_libraryName = 12, 
		RULE_externalDeclaration = 13, RULE_functionDefinition = 14, RULE_jumpStatement = 15, 
		RULE_iterationStatement = 16, RULE_selectionStatement = 17, RULE_expressionStatement = 18, 
		RULE_statementList = 19, RULE_declarationList = 20, RULE_compoundStatement = 21, 
		RULE_blockItemList = 22, RULE_blockItem = 23, RULE_labeledStatement = 24, 
		RULE_statement = 25, RULE_initializerList = 26, RULE_initializer = 27, 
		RULE_directAbstractDeclarator = 28, RULE_abstractDeclarator = 29, RULE_identifierList = 30, 
		RULE_parameterDeclaration = 31, RULE_parameterList = 32, RULE_typeQualifierList = 33, 
		RULE_pointer = 34, RULE_directDeclarator = 35, RULE_declarator = 36, RULE_specifierQualifierList = 37, 
		RULE_structSpecifier = 38, RULE_structDeclarationList = 39, RULE_structDeclaration = 40, 
		RULE_structDeclaratorList = 41, RULE_structDeclarator = 42, RULE_storageClassSpecifier = 43, 
		RULE_typeSpecifier = 44, RULE_typeNameIdentifier = 45, RULE_typeName = 46, 
		RULE_declarationSpecifiers = 47, RULE_initDeclaratorList = 48, RULE_initDeclarator = 49, 
		RULE_declaration = 50, RULE_constantExpression = 51, RULE_expression = 52, 
		RULE_assignmentOperator = 53, RULE_assignmentExpression = 54, RULE_conditionalExpression = 55, 
		RULE_logicalOrExpression = 56, RULE_logicalAndExpression = 57, RULE_equalityExpression = 58, 
		RULE_relationalExpression = 59, RULE_additiveExpression = 60, RULE_multiplicativeExpression = 61, 
		RULE_castExpression = 62, RULE_unaryOperator = 63, RULE_unaryExpression = 64, 
		RULE_argumentExpressionList = 65, RULE_postfixExpression = 66, RULE_primaryExpression = 67;
	public static readonly string[] ruleNames = {
		"start", "translationUnit", "hashStatement", "undefStatement", "ifdefStatement", 
		"ifStatement", "elifStatement", "elseStatement", "ifndefStatement", "endIfStatement", 
		"defineStatement", "includeStatement", "libraryName", "externalDeclaration", 
		"functionDefinition", "jumpStatement", "iterationStatement", "selectionStatement", 
		"expressionStatement", "statementList", "declarationList", "compoundStatement", 
		"blockItemList", "blockItem", "labeledStatement", "statement", "initializerList", 
		"initializer", "directAbstractDeclarator", "abstractDeclarator", "identifierList", 
		"parameterDeclaration", "parameterList", "typeQualifierList", "pointer", 
		"directDeclarator", "declarator", "specifierQualifierList", "structSpecifier", 
		"structDeclarationList", "structDeclaration", "structDeclaratorList", 
		"structDeclarator", "storageClassSpecifier", "typeSpecifier", "typeNameIdentifier", 
		"typeName", "declarationSpecifiers", "initDeclaratorList", "initDeclarator", 
		"declaration", "constantExpression", "expression", "assignmentOperator", 
		"assignmentExpression", "conditionalExpression", "logicalOrExpression", 
		"logicalAndExpression", "equalityExpression", "relationalExpression", 
		"additiveExpression", "multiplicativeExpression", "castExpression", "unaryOperator", 
		"unaryExpression", "argumentExpressionList", "postfixExpression", "primaryExpression"
	};

	private static readonly string[] _LiteralNames = {
		null, "'#include'", null, "'#ifndef'", "'#endif'", "'#undef'", "'#ifdef'", 
		"'#if'", "'#elif'", "'#else'", "'const'", "'struct'", "'typedef'", "'auto'", 
		"'extern'", "'static'", "'register'", "'sizeof'", "'void'", "'char'", 
		"'short'", "'int'", "'long'", "'float'", "'double'", "'signed'", "'unsigned'", 
		"'bool'", "'return'", "'if'", "'else'", "'switch'", "'for'", "'while'", 
		"'case'", "'default'", "'continue'", "'break'", "'do'", "'<'", "'>'", 
		"';'", "','", "'='", "'?'", "':'", "'*'", "'/'", "'+'", "'-'", "'('", 
		"')'", "'{'", "'}'", "'['", "']'", "'&'", "'%'", "'->'", "'.'", "'!'", 
		"'--'", "'++'", "'||'", "'&&'", "'!='", "'=='", "'>='", "'<='", "'+='", 
		"'-='", "'*='", "'/='", "'%='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Hash_Include", "Hash_Define", "Hash_ifndef", "Hash_endif", "Hash_undef", 
		"Hash_ifdef", "Hash_if", "Hash_elif", "Hash_else", "Const", "Struct", 
		"Typedef", "Auto", "Extern", "Static", "Register", "Sizeof", "Void", "Char", 
		"Short", "Int", "Long", "Float", "Double", "Signed", "Unsigned", "Bool", 
		"Return", "If", "Else", "Switch", "For", "While", "Case", "Default", "Continue", 
		"Break", "Do", "Less", "Greater", "Semicolon", "Comma", "Assign", "QuestionMark", 
		"Colon", "Multiply", "Divide", "Plus", "Minus", "LeftParen", "RightParen", 
		"LeftBrace", "RightBrace", "LeftBracket", "RightBracket", "Ampersand", 
		"Mod", "Arrow", "Dot", "Exclamation", "DecOp", "IncOp", "OrOp", "AndOp", 
		"NeOp", "EqOp", "GeOp", "LeOp", "AddAssign", "SubAssign", "MulAssign", 
		"DivAssign", "ModAssign", "Identifier", "Constant", "DigitSequence", "StringLiteral", 
		"LibraryName", "Whitespace", "Newline", "BlockComment", "LineComment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "C_Grammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static C_GrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public C_GrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public C_GrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class StartContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(C_GrammarParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TranslationUnitContext translationUnit() {
			return GetRuleContext<TranslationUnitContext>(0);
		}
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IC_GrammarListener typedListener = listener as IC_GrammarListener;
			if (typedListener != null) typedListener.EnterStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IC_GrammarListener typedListener = listener as IC_GrammarListener;
			if (typedListener != null) typedListener.ExitStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IC_GrammarVisitor<TResult> typedVisitor = visitor as IC_GrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(Context, State);
		EnterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 137;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1196268919324670L) != 0) || _la==Identifier) {
				{
				State = 136;
				translationUnit(0);
				}
			}

			State = 139;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TranslationUnitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public HashStatementContext hashStatement() {
			return GetRuleContext<HashStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExternalDeclarationContext externalDeclaration() {
			return GetRuleContext<ExternalDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TranslationUnitContext translationUnit() {
			return GetRuleContext<TranslationUnitContext>(0);
		}
		public TranslationUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_translationUnit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IC_GrammarListener typedListener = listener as IC_GrammarListener;
			if (typedListener != null) typedListener.EnterTranslationUnit(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IC_GrammarListener typedListener = listener as IC_GrammarListener;
			if (typedListener != null) typedListener.ExitTranslationUnit(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IC_GrammarVisitor<TResult> typedVisitor = visitor as IC_GrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTranslationUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TranslationUnitContext translationUnit() {
		return translationUnit(0);
	}

	private TranslationUnitContext translationUnit(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		TranslationUnitContext _localctx = new TranslationUnitContext(Context, _parentState);
		TranslationUnitContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_translationUnit, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 144;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Hash_Include:
			case Hash_Define:
			case Hash_ifndef:
			case Hash_endif:
			case Hash_undef:
			case Hash_ifdef:
			case Hash_if:
			case Hash_elif:
			case Hash_else:
				{
				State = 142;
				hashStatement();
				}
				break;
			case Const:
			case Struct:
			case Typedef:
			case Auto:
			case Extern:
			case Static:
			case Register:
			case Void:
			case Char:
			case Short:
			case Int:
			case Long:
			case Float:
			case Double:
			case Signed:
			case Unsigned:
			case Bool:
			case Multiply:
			case LeftParen:
			case Identifier:
				{
				State = 143;
				externalDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 152;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 150;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
					case 1:
						{
						_localctx = new TranslationUnitContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_translationUnit);
						State = 146;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 147;
						hashStatement();
						}
						break;
					case 2:
						{
						_localctx = new TranslationUnitContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_translationUnit);
						State = 148;
						if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
						State = 149;
						externalDeclaration();
						}
						break;
					}
					} 
				}
				State = 154;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class HashStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IncludeStatementContext includeStatement() {
			return GetRuleContext<IncludeStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DefineStatementContext defineStatement() {
			return GetRuleContext<DefineStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UndefStatementContext undefStatement() {
			return GetRuleContext<UndefStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfdefStatementContext ifdefStatement() {
			return GetRuleContext<IfdefStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfndefStatementContext ifndefStatement() {
			return GetRuleContext<IfndefStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfStatementContext ifStatement() {
			return GetRuleContext<IfStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElifStatementContext elifStatement() {
			return GetRuleContext<ElifStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElseStatementContext elseStatement() {
			return GetRuleContext<ElseStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EndIfStatementContext endIfStatement() {
			return GetRuleContext<EndIfStatementContext>(0);
		}
		public HashStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_hashStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IC_GrammarListener typedListener = listener as IC_GrammarListener;
			if (typedListener != null) typedListener.EnterHashStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IC_GrammarListener typedListener = listener as IC_GrammarListener;
			if (typedListener != null) typedListener.ExitHashStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IC_GrammarVisitor<TResult> typedVisitor = visitor as IC_GrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHashStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public HashStatementContext hashStatement() {
		HashStatementContext _localctx = new HashStatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_hashStatement);
		try {
			State = 164;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Hash_Include:
				EnterOuterAlt(_localctx, 1);
				{
				State = 155;
				includeStatement();
				}
				break;
			case Hash_Define:
				EnterOuterAlt(_localctx, 2);
				{
				State = 156;
				defineStatement();
				}
				break;
			case Hash_undef:
				EnterOuterAlt(_localctx, 3);
				{
				State = 157;
				undefStatement();
				}
				break;
			case Hash_ifdef:
				EnterOuterAlt(_localctx, 4);
				{
				State = 158;
				ifdefStatement();
				}
				break;
			case Hash_ifndef:
				EnterOuterAlt(_localctx, 5);
				{
				State = 159;
				ifndefStatement();
				}
				break;
			case Hash_if:
				EnterOuterAlt(_localctx, 6);
				{
				State = 160;
				ifStatement();
				}
				break;
			case Hash_elif:
				EnterOuterAlt(_localctx, 7);
				{
				State = 161;
				elifStatement();
				}
				break;
			case Hash_else:
				EnterOuterAlt(_localctx, 8);
				{
				State = 162;
				elseStatement();
				}
				break;
			case Hash_endif:
				EnterOuterAlt(_localctx, 9);
				{
				State = 163;
				endIfStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UndefStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Hash_undef() { return GetToken(C_GrammarParser.Hash_undef, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(C_GrammarParser.Identifier, 0); }
		public UndefStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_undefStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IC_GrammarListener typedListener = listener as IC_GrammarListener;
			if (typedListener != null) typedListener.EnterUndefStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IC_GrammarListener typedListener = listener as IC_GrammarListener;
			if (typedListener != null) typedListener.ExitUndefStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IC_GrammarVisitor<TResult> typedVisitor = visitor as IC_GrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUndefStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UndefStatementContext undefStatement() {
		UndefStatementContext _localctx = new UndefStatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_undefStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 166;
			Match(Hash_undef);
			State = 167;
			Match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfdefStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Hash_ifdef() { return GetToken(C_GrammarParser.Hash_ifdef, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(C_GrammarParser.Identifier, 0); }
		public IfdefStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifdefStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IC_GrammarListener typedListener = listener as IC_GrammarListener;
			if (typedListener != null) typedListener.EnterIfdefStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IC_GrammarListener typedListener = listener as IC_GrammarListener;
			if (typedListener != null) typedListener.ExitIfdefStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IC_GrammarVisitor<TResult> typedVisitor = visitor as IC_GrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfdefStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfdefStatementContext ifdefStatement() {
		IfdefStatementContext _localctx = new IfdefStatementContext(Context, State);
		EnterRule(_localctx, 8, RULE_ifdefStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 169;
			Match(Hash_ifdef);
			State = 170;
			Match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Hash_if() { return GetToken(C_GrammarParser.Hash_if, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public IfStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IC_GrammarListener typedListener = listener as IC_GrammarListener;
			if (typedListener != null) typedListener.EnterIfStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IC_GrammarListener typedListener = listener as IC_GrammarListener;
			if (typedListener != null) typedListener.ExitIfStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IC_GrammarVisitor<TResult> typedVisitor = visitor as IC_GrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfStatementContext ifStatement() {
		IfStatementContext _localctx = new IfStatementContext(Context, State);
		EnterRule(_localctx, 10, RULE_ifStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 172;
			Match(Hash_if);
			State = 173;
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElifStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Hash_elif() { return GetToken(C_GrammarParser.Hash_elif, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
